--- a/assets/sass/composite/blog/_comment_area.scss
+++ b/assets/sass/composite/blog/_comment_area.scss
@@ -39,12 +39,14 @@
                     }
 
                     small:first-child {
+                        width: fit-content;
                         font-style: italic;
                         font-size: 11px;
                         font-weight: bold;
                     }
 
                     small:last-child {
+                        width: fit-content;
                         padding-top: 5px;
                         padding-bottom: 5px;
                         background-color: #eee;
