--- a/assets/sass/composite/buttons/_buttons.scss
+++ b/assets/sass/composite/buttons/_buttons.scss
@@ -1,4 +1,4 @@
-.btn {
+.cc-btn {
   display: inline-block;
   padding: .5rem 1rem;
   background-color: $main-color;
@@ -19,16 +19,16 @@
     box-shadow: 2px 4px 8px rgba($black, .5);
   }
 
-  &.btn-mini {
+  &.cc-btn-mini {
     font-size: 1rem;
     padding: .25rem .5rem;
   }
 
-  &.btn-big {
+  &.cc-btn-big {
     padding: .75rem 1.5rem;
   }
 
-  &.btn-outline:hover, &.btn-outline:focus {
+  &.cc-btn-outline:hover, &.cc-btn-outline:focus {
     background-color: transparent;
     border-color: $main-color;
     color: $main-color;
