--- a/assets/sass/composite/header/_nav-item-submenu.scss
+++ b/assets/sass/composite/header/_nav-item-submenu.scss
@@ -27,16 +27,23 @@
     opacity: 0;
     visibility: hidden;
     transition: all .3s ease-in;
-  }
+    @media (max-width: $md) {
+      &.show {
+        position: relative;
+        opacity: 1;
+        visibility: visible;
+      }
+    }
 
-  a.nav-link {
-    display: block;
-    width: 100%;
-    transition: color .25s ease-in;
+    .nav-link {
+      display: block;
+      width: 100%;
+      transition: color .25s ease-in;
 
-    &:hover, &:active, &.active, &.hover {
-      color: $sec-color;
-      border-bottom-color: transparent;
+      &:hover, &:active, &.active, &.hover {
+        color: $font-color;
+        border-bottom-color: transparent;
+      }
     }
   }
 }
