--- a/assets/sass/composite/header/_navigation.scss
+++ b/assets/sass/composite/header/_navigation.scss
@@ -1,15 +1,15 @@
 nav.navigation {
+  z-index: 99;
 
   @media (max-width: $md) {
     display: block;
     position: absolute;
     top: 80px;
-    left: 0;
+    left: -100%;
     width: 100%;
     height: 500px;
     background-color: transparentize($black, .25);
     visibility: hidden;
-    transform: translateX(-100%);
     transition: transform .5s ease, visibility .5s ease;
   }
 
