--- a/assets/sass/composite/predefined/_maring.scss
+++ b/assets/sass/composite/predefined/_maring.scss
@@ -1,3 +1,16 @@
+.mt-70 {
+    margin-top: 70px;
+}
+
+.mb-70 {
+    margin-bottom: 70px;
+}
+
+.my-70 {
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+
 .mb-1 {
     margin-bottom: 1rem;
 }
