--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -8,6 +8,8 @@
 
 @import "composite/buttons/buttons";
 
+@import "composite/pagination/_pagination";
+
 @import "composite/header/header";
 
 @import "composite/banner/banner";
