--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Piazzolla:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;1,700&family=Ubuntu:wght@300;400;500;700&display=swap");
+.piazzo {
+  font-family: 'Piazzolla', serif;
+}
+
+.ubuntu {
+  font-family: 'Ubuntu', sans-serif;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
