Bugs fixes, Ajout des article, listing et affichage des artciles, gestion de la page de blog et de single blog en V1, liaison article-catégories

--- a/assets/sass/composite/banner/_banner.scss
+++ b/assets/sass/composite/banner/_banner.scss
@@ -6,9 +6,8 @@
   border-top: .5rem solid #ffa400;
 
     &.single-banner {
-        background: linear-gradient(to bottom, rgba(#000, .75) 75%, rgba(#fff, .4)), url("../imgs/blog/main-blog/mainBlog-2.jpg") center no-repeat;
-        -webkit-background-size: cover;
-        background-size: cover;
+        -webkit-background-size: cover !important;
+        background-size: cover !important;
         height: 200px;
 
         .b-title {
