--- a/assets/sass/composite/blog/_blog_info.scss
+++ b/assets/sass/composite/blog/_blog_info.scss
@@ -11,6 +11,7 @@
         padding-bottom: 1rem;
 
         a {
+            display: inline-block;
             font: 300 .9em/1.2 $ubuntu;
             color: $font-color;
             transition: .25s ease-in;
