Optimisation de l'organisation des fichiers

--- a/assets/sass/composite/predefined/_img.scss
+++ b/assets/sass/composite/predefined/_img.scss
@@ -3,6 +3,16 @@
   vertical-align: middle;
 }
 
+.img-mini {
+  width: 32px;
+  height: 32px;
+}
+
+.img-medium {
+  width: 64px;
+  height: 64px;
+}
+
 .img-rounded {
   border-radius: 50%;
 }
