--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -286,6 +286,16 @@ ul, ol, li, dl {
   vertical-align: middle;
 }
 
+.img-mini {
+  width: 32px;
+  height: 32px;
+}
+
+.img-medium {
+  width: 64px;
+  height: 64px;
+}
+
 .img-rounded {
   border-radius: 50%;
 }
